# Recipe-assistant-langchain

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml
docs/: code-architecture.md  langchain-concepts.md  llm-tool-execution-details.md
src/: __init__.py
src/apis/: __init__.py  api_client.py
src/chat/: __init__.py  chain.py  prompt.py  recipe_model.py  response_parser.py  streaming_parser.py
src/model/: __init__.py  llm.py  llm_config.py
src/tools/: __init__.py  recipe_tool.py  tool_call.py  tools.py
src/ui/: __init__.py  chat_interface.py  chat_manager.py
